feat [controller,impl,entity] 会议历史记录添加高级搜索,修复参会人中不显示创建人的bug